kubernetes/media/prowlarr/ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: traefik
spec:
  routes:
    - match: Host(`prowlarr.axis.scottmckendry.tech`)
      kind: Rule
      middlewares:
        - name: ipallowlist
          namespace: traefik
        - name: forwardauth
          namespace: traefik
      services:
        - name: prowlarr-app
          namespace: media
          port: 80
  tls:
    secretName: axis-tls
